--- a/01.html
+++ b/01.html
@@ -8,7 +8,7 @@
 </head>
 <body>
      <div class="bg-black">
-        <h1 class="heading">Dom Learning in Javascript with chai aur code </h1>
+        <h1 id="title" class="heading">Dom Learning in Javascript with chai aur code </h1>
          <p> Lorem ipsum dolor sit amet consectetur adipisuidem totamcaecati eius?</p>
          
          <h2> Lorem ipsum dolor sit.</h2>
@@ -21,7 +21,6 @@
         <ul>
             <li>one </li>
             <li>two</li>
-
             <li>three</li>
         </ul>
      </div>
